src/app/globals.css
@import "tailwindcss";

:root {
  --primary: #0047c2;
  --primary-light: #1a5bca;
  --primary-dark: rgb(19, 67, 151);
  --background-light: #fbfbfb;
  --background-dark: #1d1d1d;
  --background-dark-secondary: #2f2f2f;
  --slate: #eff7ff;
}

@theme {
  --color-primary: var(--primary);
  --color-primary-light: var(--primary-light);
  --color-primary-dark: var(--primary-dark);
  --color-background-light: var(--background-light);
  --color-background-dark: var(--background-dark);
  --color-background-dark-secondary: var(--background-dark-secondary);
  --color-slate: var(--slate);
}

.capabilities-scroll::-webkit-scrollbar {
  height: 8px;
  width: 8px;
}

.capabilities-scroll::-webkit-scrollbar-track {
  background: var(--background-dark-secondary);
  border-radius: 4px;
}

.capabilities-scroll::-webkit-scrollbar-thumb {
  background: var(--primary);
  border-radius: 4px;
}

.capabilities-scroll::-webkit-scrollbar-thumb:hover {
  background: var(--primary-light);
}

.capabilities-scroll::-webkit-scrollbar-corner {
  background: var(--background-dark-secondary);
}

